--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -28,8 +28,8 @@ jobs:
       - name: Install tox and any other packages
         run: pip install -r requirements.txt
       - name: Run Pytest
-        # Run tox using the version of Python in `PATH`
         run: pytest tests/
-      - name: Run Tox test
-        # Run tox using the version of Python in `PATH`
+      - name: Run Tox
         run: tox
+      - name: Run Poetry
+        run: poetry install
