--- a/tox.ini
+++ b/tox.ini
@@ -6,3 +6,7 @@ skipsdist = true
 alwayscopy = True
 deps = -rrequirements.txt
 commands = pytest
+
+[testenv:build_docs]
+extras = docs
+commands = sphinx-build docs docs/_build/html -W -b html {posargs}
