Updating Github Actions

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -3,6 +3,9 @@
 
 name: Python application
 
+env:
+  PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
+
 on:
   push:
     branches: [ "main" ]
